# pihole-wizard-web

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  scan.sh
.github/workflows/: docker-publish.yml  docker.yml
backend/: __init__.py  main.py  models.py
backend/api/: blocklists.py  chat.py  config.py  install.py  prerequisites.py  ssh.py  stats.py  update.py  wizard.py
backend/core/: config_generator.py  prerequisites.py  ssh_manager.py  stats.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  chat.js
landing/: index.html  install-help.html  install.sh  middleware.js  og-image.html  package.json  scan.sh
landing/api/: stats.js
