[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pihole-wizard-web"
version = "1.0.0"
description = "Web-based Pi-hole & Unbound setup wizard with AI troubleshooting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Anish Joseph"}
]
keywords = ["pihole", "unbound", "dns", "ad-blocking", "webapp", "wizard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "anthropic>=0.18.0",
    "netifaces>=0.11.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.26.0",
]

[project.scripts]
pihole-wizard-web = "backend.main:run"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
